--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
