Initialize v0 Host/Join activity. Move game activity starting functionality from Chat activity to game model.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
 
         <activity android:name=".activities.GameActivity" />
         <activity android:name=".activities.games.TwentyFortyEight" />
-        <activity android:name=".activities.games.TicTacToe"></activity>
+        <activity android:name=".activities.games.TicTacToe" />
+        <activity android:name=".activities.games.HostJoinActivity"></activity>
     </application>
 
 </manifest>
